# cot-faithfulness-audit

./: .gitignore  README.md  ROADMAP.md  pyproject.toml
audit/: faithfulness_audit.md  outcome_calibration.md
data/: README.md  decisions.yaml  runs.yaml
docs/: what-is-out-of-scope.md
scripts/: check_english_only.py  run_faithfulness_audit.py  run_outcome_calibration.py
src/cotfaith/: __init__.py  audit.py  bootstrap.py  checks.py  counterfactual.py  ledger.py  metrics.py  outcome_calibration.py
tests/: test_audit.py  test_checks.py  test_faithfulness.py  test_v02.py
