[project]
name = "cot-faithfulness-audit"
version = "0.1.0"
description = "Audit whether an agent's stated reasoning matches its actual tool calls, results, and decision (CoT faithfulness, from the audit ledger)."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "H. Ryan Kim" }]
requires-python = ">=3.11"
dependencies = ["pyyaml>=6.0.1"]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "ruff>=0.4.0"]

[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cotfaith"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
